# asciichanges

./: CMakeLists.txt  README.md  README.md.in  accidentals.pegjs  asciichanges.pc.in  asciichanges.pegjs  asciichanges2.pegjs  bars.pegjs  chord.pegjs  index.html  makefile  note.pegjs  package.json  parse.js  parser.js  simple.pegjs  test.js  test.pegjs  test_bars.js  test_parser.cmake  test_simple.js  tests.js
asciichanges/: asciichanges.h  chords.h
compilers/: asciichanges2json.cc
docs/: asciichanges-parser.js  asciichanges.js  asciichanges2.js  index.html  music.js  script.js  style.css
examples/: autumn_leaves.ac  empty_bars.ac  simple1.ac  simple3.ac
examples/invalid/: autumn_leaves.ac  stella_by_starlight.ac
examples/valid/snippets/: comments_and_keyvalues.ac  empty_bars.ac  free_chords.ac
examples/valid/songs/: autumn_leaves.ac  stella_by_starlight.ac
include/asciichanges/: chords.h  parse_info.h  parser.h  results.h  song.h
src/: parser.cc
tests/: 001.cc  002.cc  003.cc  parse_song.cc
web/: asciichanges-parser.js  index.html  music.js  script.js  sonant.js  style.css
